<resources>
    <string name="app_name">Rider App</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_exit">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_require">Permission location required</string>
    <string name="drivers_not_found">Drivers not found</string>
    <string name="key_not_found">Key driver not found</string>
    <string name="welcome">Good afternoon</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="city_name_not_found">City name not found</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="pay_by_cash">Pay by cash</string>
    <string name="confirm_uber">Confirm Driver</string>
    <string name="confirm_pickup_spot">Confirm pickup spot</string>
    <string name="text_demo">Kumala Laggon</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="meet_driver_here">Meet driver here</string>
    <string name="finding_your_ride">Finding your ride</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_driver_failed">Request driver failed</string>
    <string name="no_driver_accept">There are no driver accept your request</string>
    <string name="trip_not_found">Cannot find trip with key</string>
    <string name="motor_type">Aerox</string>
    <string name="car_number_example">B 1234 BEW</string>
    <string name="driver_name_example">Deen Snuts</string>
    <string name="pay_by_app">Already payed by app</string>
</resources>