<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driver_info_layout"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/car_display"
                    android:layout_marginLeft="50dp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_driver"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_account_circle_24"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                >

                <TextView
                    android:id="@+id/txt_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/motor_type"
                    android:textColor="#737373"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_vehicle_number"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/buttonSpace"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/car_number_example"/>



            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:paddingRight="@dimen/activity_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_driver_name"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/buttonSpace"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/driver_name_example"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_phone_number"
                    android:layout_gravity="center_vertical"
                    android:textColor="#737373"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="08123456785"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:weightSum="12"
            >
            <com.kusu.library.LoadingButton
                tools:overrideLibrary="com.kusu.library"
                android:id="@+id/btn_call_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="call"
                android:textColor="@color/lightGray"
                android:background="@color/colorPrimary"
                app:lb_buttonColor="@color/colorPrimary"
                app:lb_isCircular="false" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>